[gd_scene load_steps=8 format=3 uid="uid://4d3ksr3171x4"]

[ext_resource type="Script" path="res://entities/imp.gd" id="1_dixpc"]
[ext_resource type="PackedScene" uid="uid://dijcjahkddudv" path="res://behaviours/draggable.tscn" id="3_4528r"]
[ext_resource type="PackedScene" uid="uid://dfitiajuuvdko" path="res://behaviours/eat_target.tscn" id="3_iybf3"]
[ext_resource type="PackedScene" uid="uid://cyrg770fsetyu" path="res://behaviours/spawner.tscn" id="4_d8lgm"]
[ext_resource type="PackedScene" uid="uid://uoxwjpmgg27a" path="res://entities/gold.tscn" id="5_yrfoq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c5tcn"]
radius = 16.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_08frh"]

[node name="Imp" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 14
script = ExtResource("1_dixpc")

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_c5tcn")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(32, 32)
texture = SubResource("PlaceholderTexture2D_08frh")

[node name="Draggable" parent="." instance=ExtResource("3_4528r")]
scale = Vector2(2, 2)

[node name="DragSound" type="AudioStreamPlayer2D" parent="Draggable"]
scale = Vector2(0.5, 0.5)

[node name="DropSound" type="AudioStreamPlayer2D" parent="Draggable"]
scale = Vector2(0.5, 0.5)

[node name="EatTarget" parent="." instance=ExtResource("3_iybf3")]
tag = &"Sheep"

[node name="SkullSpawner" parent="." instance=ExtResource("4_d8lgm")]
scene = ExtResource("5_yrfoq")

[connection signal="move" from="Draggable" to="." method="_on_draggable_move"]
[connection signal="eaten" from="EatTarget" to="." method="_on_eat_target_eaten"]
[connection signal="move" from="EatTarget" to="." method="_on_move"]
